tests/it/wire/snapshots/it__wire__bedrock__a_model_that_cannot_cache_sends_no_cache_points.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/model/anthropic.claude-sonnet-4-6/converse",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "476"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "system": [
      {
        "text": "Keep it short."
      }
    ],
    "messages": [
      {
        "role": "user",
        "content": [
          {
            "text": "What is the capital of France?"
          }
        ]
      },
      {
        "role": "assistant",
        "content": [
          {
            "text": "Paris."
          }
        ]
      },
      {
        "role": "user",
        "content": [
          {
            "text": "And of Spain?"
          }
        ]
      }
    ],
    "toolConfig": {
      "tools": [
        {
          "toolSpec": {
            "name": "get_weather",
            "description": "Reads the current weather for a city",
            "inputSchema": {
              "json": {
                "type": "object",
                "properties": {
                  "city": {
                    "type": "string"
                  }
                },
                "required": [
                  "city"
                ]
              }
            }
          }
        }
      ]
    },
    "inferenceConfig": {
      "maxTokens": 128
    }
  }
}
