tests/it/wire/snapshots/it__wire__bedrock__a_raw_option_overrides_one_generated_inference_field.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/model/anthropic.claude-sonnet-4-6/converse",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "152"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "messages": [
      {
        "role": "user",
        "content": [
          {
            "text": "Hello"
          }
        ]
      }
    ],
    "inferenceConfig": {
      "temperature": 0.5,
      "maxTokens": 4096
    },
    "guardrailConfig": {
      "trace": "enabled"
    }
  }
}
