tests/it/wire/snapshots/it__wire__bedrock__a_refusal_fails_the_call.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "kind": "content_filter",
  "message": "provider bedrock refused the request",
  "provider": "bedrock",
  "provider_code": "refusal",
  "retry": {
    "type": "never"
  },
  "raw_data": {
    "output": {
      "message": {
        "content": [],
        "role": "assistant"
      }
    },
    "stopReason": "refusal",
    "usage": {
      "inputTokens": 12,
      "outputTokens": 0,
      "totalTokens": 12
    }
  }
}
