tests/it/wire/snapshots/it__wire__bedrock__a_replayed_tool_call_id_keeps_its_dots_and_colons.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "body": {
    "messages": [
      {
        "content": [
          {
            "text": "What is the weather in Paris?"
          },
          {
            "cachePoint": {
              "type": "default"
            }
          }
        ],
        "role": "user"
      },
      {
        "content": [
          {
            "toolUse": {
              "input": {
                "city": "Paris"
              },
              "name": "get_weather",
              "toolUseId": "functions.get_weather:4"
            }
          }
        ],
        "role": "assistant"
      },
      {
        "content": [
          {
            "toolResult": {
              "content": [
                {
                  "text": "18C and clear"
                }
              ],
              "toolUseId": "functions.get_weather:4"
            }
          }
        ],
        "role": "user"
      }
    ]
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "368"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/model/anthropic.claude-sonnet-4-6/converse"
}
