tests/it/wire/snapshots/it__wire__bedrock__a_signed_request_differs_only_in_authentication.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "bearer": {
    "method": "POST",
    "path": "/model/anthropic.claude-sonnet-4-6/converse",
    "headers": [
      [
        "accept",
        "*/*"
      ],
      [
        "authorization",
        "[redacted]"
      ],
      [
        "content-length",
        "95"
      ],
      [
        "content-type",
        "application/json"
      ],
      [
        "host",
        "[host]"
      ],
      [
        "user-agent",
        "[user-agent]"
      ]
    ],
    "body": {
      "messages": [
        {
          "role": "user",
          "content": [
            {
              "text": "Hello"
            }
          ]
        }
      ],
      "inferenceConfig": {
        "maxTokens": 128
      }
    }
  },
  "signed": {
    "method": "POST",
    "path": "/model/anthropic.claude-sonnet-4-6/converse",
    "headers": [
      [
        "accept",
        "*/*"
      ],
      [
        "authorization",
        "[redacted]"
      ],
      [
        "content-length",
        "95"
      ],
      [
        "content-type",
        "application/json"
      ],
      [
        "host",
        "[host]"
      ],
      [
        "user-agent",
        "[user-agent]"
      ],
      [
        "x-amz-date",
        "[amz-date]"
      ]
    ],
    "body": {
      "messages": [
        {
          "role": "user",
          "content": [
            {
              "text": "Hello"
            }
          ]
        }
      ],
      "inferenceConfig": {
        "maxTokens": 128
      }
    }
  }
}
