tests/it/wire/snapshots/it__wire__bedrock__a_streamed_refusal_fails_before_the_stream_completes.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
[
  {
    "id": null,
    "type": "started"
  },
  {
    "error": {
      "kind": "content_filter",
      "message": "provider bedrock refused the request",
      "provider": "bedrock",
      "provider_code": "refusal",
      "raw_data": {
        "stopReason": "refusal"
      },
      "retry": {
        "type": "never"
      }
    },
    "type": "error"
  }
]
