tests/it/wire/snapshots/it__wire__bedrock__an_error_frame_fails_the_stream.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
[
  {
    "type": "started",
    "id": null
  },
  {
    "type": "content_block_start",
    "id": "block-0",
    "kind": {
      "type": "text"
    }
  },
  {
    "type": "text_delta",
    "id": "block-0",
    "text": "Chec"
  },
  {
    "type": "error",
    "error": {
      "kind": "server",
      "message": "provider bedrock The model stopped responding mid-stream.",
      "provider": "bedrock",
      "provider_code": "ModelStreamErrorException",
      "retry": {
        "type": "safe"
      },
      "raw_data": {}
    }
  }
]
